...
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="Quick Tutor"
        android:textSize="24dp" />

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Enter"
        android:textSize="16dp" />

    <LinearLayout
...
