<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AdFragment">

    <Button
        android:id="@+id/adButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Place Ad"
        android:textSize="16dp"></Button>

</FrameLayout>